almost all the bugs fixed

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                         </h1>
                     </div>
 
-                    <div class="pt-5 pb-4 d-flex justify-content-between">
-                        <div class="col-md-4 row">
-                            <div class="pb-1">
-                                <img src="assets/images/telegram.svg" alt="" srcset="">
+                    <div class="pt-5 pb-4 row justify-content-between">
+                        <div class="col-md-4 col-xs-12 why-join-content">
+                            <div class="pb-1 ">
+                                <img class="" src="assets/images/telegram.svg" alt="" srcset="">
                             </div>
                             <h3 class="text-content-heading fw-bolder pt-5 pb-2">140+ Premium Crypto Leaks Channels</h4>
                                 <h5 class="col-md-9 text-content pt-1 pb-3 text-light">
@@ -119,15 +119,12 @@
                                     margin trading and altcoins.
                                 </h5>
                         </div>
-
-                        <div class="col-md-4 row">
-                            <div class="col-md-1">
-                            </div>
-                            <div class="col-md-11">
+                        <div class="col-md-4 col-xs-12 row">
+                            <div class="col-md-12 why-join-content">
                                 <div class="pb-1">
-                                    <img src="assets/images/support 1.svg" alt="" srcset="">
+                                    <img class="" src="assets/images/support 1.svg" alt="" srcset="">
                                 </div>
-                                <h3 class="text-content-heading fw-bolder pt-5 pb-2">Discussion & Support<br> Channel
+                                <h3 class="text-content-heading fw-bolder pt-5 pb-2">Discussion & Support Channel
                                     </h4>
                                     <h5 class="col-md-11 text-content pt-1 pb-3 text-light">
                                         In addition to our signal channels, we have a dedicated
@@ -136,25 +133,21 @@
                                     </h5>
                             </div>
                         </div>
-
-                        <div class="col-md-4 row">
+                        <div class="col-md-4 col-xs-12 row">
                             <div class="col-md-2">
                             </div>
-
-                            <div class="col-md-10">
+                            <div class="col-md-10 why-join-content" >
                                 <div>
                                     <img src="assets/images/flash-sale 1.svg" alt="" srcset="">
                                 </div>
-                                <h3 class="text-content-heading fw-bolder pt-5 pb-4">Lightning fast</h3>
-                                <h5 class="col-md-12 text-content pt-3 pb-3 text-light">
-                                    We receive crypto signals on our dedicated server in
-                                    real time and deliver them to you via our telegram
-                                    in less than 2 seconds.
-                                </h5>
+                                <h3 class="text-content-heading fw-bolder pt-5 pb-4">Lightning fast</h4>
+                                    <h5 class="col-md-12 text-content pt-3 pb-3 text-light">
+                                        We receive crypto signals on our dedicated server in
+                                        real time and deliver them to you via our telegram
+                                        in less than 2 seconds.
+                                    </h5>
                             </div>
-
                         </div>
-
                     </div>
 
                 </div>
@@ -417,10 +410,10 @@
                     <div class="col-md-5">
                         <img class="logoimage" src="assets/images/logo.svg" alt="">
                     </div>
-                    <div class="col-md-5 col-sm-7 mt-5">
+                    <div class="col-md-5 mt-5">
                         <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
                     </div>
-                    <div class="footer-text col-md-2 col-sm-7 mt-5">
+                    <div class="footer-text col-md-2 mt-5">
                         <h6>POLITICA DE<br> PRIVACIDADE</h6>
                     </div>
                 </div>
