--- a/providers.html
+++ b/providers.html
@@ -19,9 +19,9 @@
 
 <body>
     <div class="container providersbody">
-        <div class="col-md-11">
+        <div class="col-md-12">
             <header>
-                <div class="col-md-12">
+                <div class="col-md-11">
                     <div class="navbar pb-1 col-12 pt-3 d-flex justify-content-center">
                         <div class="col-md-6 d-flex justify-content-left">
                             <img class="logoimage" src="assets/images/logo.svg" alt="">
@@ -43,6 +43,13 @@
                                     <h4>Providers</h4>
                                 </a>
                             </div>
+
+                            <div class="col-md-3 p-2">
+                                <a class="navbar-text" href="/index.html#subscription-section">
+                                    <h4 class="fw-bolder" style="color: #FF00E5;">SUBSCRIPTIONS</h4>
+                                </a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -61,17 +68,17 @@
 
 
             <footer class="pb-2 mt-5 mb-5 pt-5">
-                    <div class="footer col-12 row">
-                        <div class="col-md-5">
-                            <img class="logoimage" src="assets/images/logo.svg" alt="">
-                        </div>
-                        <div class="col-md-5 col-sm-7 mt-5">
-                            <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
-                        </div>
-                        <div class="footer-text col-md-2 col-sm-7 mt-5">
-                            <h6>POLITICA DE<br> PRIVACIDADE</h6>
-                        </div>
+                <div class="footer col-12 row">
+                    <div class="col-md-5">
+                        <img class="logoimage" src="assets/images/logo.svg" alt="">
                     </div>
+                    <div class="col-md-5 mt-5">
+                        <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
+                    </div>
+                    <div class="footer-text col-md-2 mt-5">
+                        <h6>POLITICA DE<br> PRIVACIDADE</h6>
+                    </div>
+                </div>
             </footer>
         </div>
     </div>
