--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
 
 <body>
     <div class="container aboutbody">
-        <div class="col-md-11">
+        <div class="col-md-12">
             <header>
-                <div class="col-md-12">
+                <div class="col-md-11">
                     <div class="navbar pb-1 col-12 pt-3 d-flex justify-content-center">
                         <div class="col-md-6 d-flex justify-content-left">
                             <img class="logoimage" src="assets/images/logo.svg" alt="">
@@ -42,6 +42,13 @@
                                     <h4>Providers</h4>
                                 </a>
                             </div>
+
+                            <div class="col-md-3 p-2">
+                                <a class="navbar-text" href="/index.html#subscription-section">
+                                    <h4 class="fw-bolder" style="color: #FF00E5;">SUBSCRIPTIONS</h4>
+                                </a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -98,7 +105,7 @@
                     </div>
                 </div>
 
-                <div class="second-content">
+                <div class="second-row p-3">
                     <div class="pt-5 pb-5">
                         <h1 class="main-title mt-4" style="font-size: 47px;color: #FFFF;">
                             Why You Should Join
@@ -108,9 +115,9 @@
                         </h1>
                     </div>
                     <div class="pt-5 pb-4 row justify-content-between">
-                        <div class="col-md-4 col-xs-12">
+                        <div class="col-md-4 col-xs-12 why-join-content">
                             <div class="pb-1 ">
-                                <img src="assets/images/telegram.svg" alt="" srcset="">
+                                <img class="" src="assets/images/telegram.svg" alt="" srcset="">
                             </div>
                             <h3 class="text-content-heading fw-bolder pt-5 pb-2">140+ Premium Crypto Leaks Channels</h4>
                                 <h5 class="col-md-9 text-content pt-1 pb-3 text-light">
@@ -120,13 +127,13 @@
                                 </h5>
                         </div>
                         <div class="col-md-4 col-xs-12 row">
-                            <div class="col-md-12">
+                            <div class="col-md-12 why-join-content">
                                 <div class="pb-1">
-                                    <img src="assets/images/support 1.svg" alt="" srcset="">
+                                    <img class="" src="assets/images/support 1.svg" alt="" srcset="">
                                 </div>
-                                <h3 class="text-content-heading fw-bolder pt-5 pb-2">Discussion & Support Channel
+                                <h3 class="text-content-heading fw-bolder pt-5 pb-4">Discussion & Support Channel
                                     </h4>
-                                    <h5 class="col-md-11 text-content pt-1 pb-3 text-light">
+                                    <h5 class="col-md-11 text-content pt-3 pb-3 text-light">
                                         In addition to our signal channels, we have a dedicated
                                         discussion and support chat where our members can talk
                                         to each other and we provide 24/7 support.
@@ -136,7 +143,7 @@
                         <div class="col-md-4 col-xs-12 row">
                             <div class="col-md-2">
                             </div>
-                            <div class="col-md-10 ">
+                            <div class="col-md-10 why-join-content" >
                                 <div>
                                     <img src="assets/images/flash-sale 1.svg" alt="" srcset="">
                                 </div>
@@ -159,10 +166,10 @@
                     <div class="col-md-5">
                         <img class="logoimage" src="assets/images/logo.svg" alt="">
                     </div>
-                    <div class="col-md-5 col-sm-7 mt-5">
+                    <div class="col-md-5 mt-5">
                         <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
                     </div>
-                    <div class="footer-text col-md-2 col-sm-7 mt-5">
+                    <div class="footer-text col-md-2 mt-5">
                         <h6>POLITICA DE<br> PRIVACIDADE</h6>
                     </div>
                 </div>
