[200~/home/fawaz/Documents/crypto-signals-leaks/cryptoleaks-final correction-new-1/assets

--- a/about.html
+++ b/about.html
@@ -61,6 +61,7 @@
         <li><a class="nav-link " href="index.html">Home</a></li>
         <li><a class="nav-link " href="about.html">About</a></li>
         <li><a class="nav-link " href="providers.html">Providers</a></li>
+        <li><a class="nav-link " href="subscriptions.html"><span>SUBSCRIPTIONS</span></a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
@@ -80,7 +81,7 @@
           <h2>Biggest Crypto Signal Leaks Provider</h2>
           <p>We strongly believe in crypto and want our members to get a wide range of vetted experts and resources without having to be afraid of being scammed. We constantly monitor channel performance and continuously review new channels. Seeing multiple opinions is what truly makes you a more informed trader. Whether you are day trading, looking for quick scalps, long term holds, or small cap gems–Crypto Signal Leaks is the right place for you.</p>
 
-           <p>The best trading information in the world is collected in one place, when to buy, when to sell, crypto news and many other tips to help you earn, including a wide range of crypto training materials. On our server, You will receive all well-known premium crypto Signals. We have huge experience and a large user base, always trying to add more number of channels.</p>
+           <p>The best trading information in the world is collected in one place, when to buy, when to sell,crypto news and many other tips to help you earn, including a wide range of crypto training materials. On our server, You will receive all well-known premium crypto Signals. We have huge experience and a large user base, always trying to add more number of channels.</p>
 
            <h2>Our services include:</h2>
 
@@ -176,9 +177,9 @@
         </svg>
         </a></h1>
     
-      <div class="copyright"> <h6>
-        &copy; Copyright<span>cryptosignalsleaks</span>.All Rights Reserved</h6>
-      </div>
+        <div class="copyright"> <h6>
+          Copyright &copy; 2022 <span> cryptosignalsleaks</span>. All Rights Reserved</h6>
+         </div>
     </div>
   </footer><!-- End Footer -->
 
