--- a/providers.html
+++ b/providers.html
@@ -62,6 +62,7 @@
         <li><a class="nav-link " href="index.html">Home</a></li>
         <li><a class="nav-link " href="about.html">About</a></li>
         <li><a class="nav-link " href="providers.html">Providers</a></li>
+        <li><a class="nav-link " href="subscriptions.html"><span>SUBSCRIPTIONS</span></a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
@@ -75,7 +76,7 @@
       <div class="row">
         <div class="col-lg-12 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
           <h1><span>Premium Crypto Providers</span></h1>
-          <img src="assets/images/LEAK Image 1.jpg" alt="">
+          <img src="assets/images/Crypto Signal Leak Providers.jpeg.jpg" alt="">
           <div class="d-flex justify-content-center justify-content-lg-start">
           </div>
         </div>
@@ -114,9 +115,10 @@
         </svg>
         </a></h1>
     
-      <div class="copyright"> <h6>
-        &copy; Copyright<span>cryptosignalsleaks</span>.All Rights Reserved</h6>
-      </div>
+      
+        <div class="copyright"> <h6>
+          Copyright &copy; 2022 <span> cryptosignalsleaks</span>. All Rights Reserved</h6>
+         </div>
     </div>
   </footer><!-- End Footer -->
 
